--- a/nutrition/summary.tex
+++ b/nutrition/summary.tex
@@ -1,7 +1,7 @@
-Нашае жыцьцё – гэта ня спрынт «схуднець да лета», а маратон «быць здаровым ды энэргічным доўгія гады і перадухіліць раньняе старэньне». У харчаваньні істотная рэч – прытрымлівацца залатой сярэдзіны, улічваць навуковыя парады, традыцыйныя практыкі й асабістыя адметнасьці. Ніхто ня ведае нас лепей, чымся мы самі. Калі ж да гэтае веды дадаць разуменьне падставовых працэсаў, гэта дапаможа прымаць слушныя й здаровыя рашэньні.
+Нашае жыцьцё~--- гэта ня спрынт «схуднець да лета», а~маратон «быць здаровым ды энэргічным доўгія гады і перадухіліць раньняе старэньне». У~харчаваньні істотная рэч~--- прытрымлівацца залатой сярэдзіны, улічваць навуковыя парады, традыцыйныя практыкі й~асабістыя адметнасьці. Ніхто ня ведае нас лепей, чымся мы самі. Калі ж да гэтае веды дадаць разуменьне падставовых працэсаў, гэта дапаможа прымаць слушныя й~здаровыя рашэньні.
 
-Кніга Андрэя Белавешкіна, доктара, к. м. н., выкладчыка, – гэта збор гнуткіх правілаў, кожным зь якіх можна карыстацца асобна. Правілы рэжыму харчаваньня, выбару прадуктаў, а таксама псыхалёгіі харчаваньня даюць адказы на найбольш важныя пытаньні: калі есьці? што есьці? як есьці?
+Кніга Андрэя Белавешкіна, доктара, к.~м.~н., выкладчыка,~--- гэта збор гнуткіх правілаў, кожным зь якіх можна карыстацца асобна. Правілы рэжыму харчаваньня, выбару прадуктаў, а~таксама псыхалёгіі харчаваньня даюць адказы на найбольш важныя пытаньні: калі есьці? што есьці? як есьці?
 
-Увага! Інфармацыя, зьмешчаная ў кнізе, ня можа выступаць заменай кансультацыі лекара. Перад тым як ажыцьцявіць любую з рэкамэндаваных дзеяў, неабходна пракансультавацца са спэцыялістам.
+Увага! Інфармацыя, зьмешчаная ў~кнізе, ня можа выступаць заменай кансультацыі лекара. Перад тым як ажыцьцявіць любую з~рэкамэндаваных дзеяў, неабходна пракансультавацца са спэцыялістам.
 
-здаровы лад жыцьця, рэжым харчаваньня, здаровае харчаваньне, культура харчаваньня, дыеталёгія, парады дактароў
+\emph{здаровы лад жыцьця, рэжым харчаваньня, здаровае харчаваньне, культура харчаваньня, дыеталёгія, парады дактароў}
