Add willpower skeleton

--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -47,7 +47,7 @@
 
 З 20 да 70 гадоў сінтэз вітаміну Д у скуры падае ў 4 разы. У людзей з залішняй вагой тлушчавая тканіна актыўна паглынае вітамін Д. У Дэлі дэфіцыт вітаміну Д адчувае да 90% жыхароў, і нават Аўстралія так заўзята змагалася з ракам скуры, што атрымала дэфіцыт вітаміну Д. 
 
-Колькі ж вітаміну Д выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D & UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў плаўках выйду ў Тайландзе ў 13.00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну Д. 
+Колькі ж вітаміну Д выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў плаўках выйду ў Тайландзе ў 13.00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну Д. 
 
 З дапамогай сонечных ваннаў можна стварыць у падскурнай клятчатцы вялікі запас вітаміну Д, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць – і зімой прымаць прафіляктычныя дозы вітаміну. 
 
