--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -105,7 +105,7 @@
 
 ((карцінка: рухальная актыўнасьць калёрыі, макранутрыенты узровень стрэсу пульс і ціск якасьць і колькасьць сну якасьць паветра праца мозгу))
 
-Мы можам ацэньваць ня толькі ўнутранае, але і навакольнае асяродзьдзе, заўважаючы, як на наша здароўе і самаадчуваньне ўплывае ўсё, што нас атачае. Напрыклад, праграмы SunDay: Vitamin D & UV Monitor або Dminder дапамогуць адсачыць сонечную актыўнасьць, час для загару і ўзровень вітаміну Д. Падключаныя да смартфона датчыкі вуглякіслага газу (CO2), чысьціні паветра (P.M 2,5), вільготнасьці ды іншыя дапамагаюць сачыць за якасьцю паветра як унутры пакоя, так і на дварэ.
+Мы можам ацэньваць ня толькі ўнутранае, але і навакольнае асяродзьдзе, заўважаючы, як на наша здароўе і самаадчуваньне ўплывае ўсё, што нас атачае. Напрыклад, праграмы SunDay: Vitamin D \& UV Monitor або Dminder дапамогуць адсачыць сонечную актыўнасьць, час для загару і ўзровень вітаміну Д. Падключаныя да смартфона датчыкі вуглякіслага газу (CO2), чысьціні паветра (P.M 2,5), вільготнасьці ды іншыя дапамагаюць сачыць за якасьцю паветра як унутры пакоя, так і на дварэ.
 
 Біямаркеры. У XVIII стагодзьдзі лекары наракалі, што «падковам і капытам коней людзі надаюць больш увагі, чым уласным нагам», у XXI стагодзьдзі людзі часьцяком трацяць больш часу на аўтамабіль або дызайн сваёй кватэры, чым на сваё здароўе. Вядомыя вам біямаркеры дапамагаюць правільна расставіць прыярытэты: даць адзнаку рэальнага стану рэчаў, спрагназаваць, ацаніць рызыкі. Чым вышэйшая рызыка таго ці іншага захворваньня, тым больш агрэсіўнай павінна быць тэрапія, больш дбайным – адсочваньне прагрэсу, больш падрабязным – маніторынг пабочных эфэктаў і да т.п.
 
