--- a/willpower/chapter8.tex
+++ b/willpower/chapter8.tex
@@ -252,7 +252,7 @@
 
 Магчыма, вам паасавацьмуць іншыя мэтафары: кіно – эмоцыі паказваюць на экране, а вы – глядач у зале, аблокаў – вы лежыце на зямлі, а па небе праносяцца аблокі-эмоцыі, хваляў – вы з дошкай для сэрфінгу стаіце на беразе мора і выбіраеце, якую хвалю прапусьціць, а на якой эмацыйнай хвалі пракаціцца.
 
-Здушэньне эмоцыяў. Частую памылку робяць людзі, разьбіраючыся з эмоцыямі. Калі мы задаём сабе пытаньне: "Чаму мне так страшна?" -- мозг можа знайсьці мноства тлумачэньняў. Аналізуючы кожную прычыну, мы яшчэ больш баімся і яшчэ мацней зацыкліваемся на гэтым. Калі вы спытаеце сябе: "Чаму мне добра?" -- таксама будуць знойдзеныя дзясяткі адказаў.
+Здушэньне эмоцыяў. Частую памылку робяць людзі, разьбіраючыся з эмоцыямі. Калі мы задаём сабе пытаньне: "Чаму мне так страшна?" --- мозг можа знайсьці мноства тлумачэньняў. Аналізуючы кожную прычыну, мы яшчэ больш баімся і яшчэ мацней зацыкліваемся на гэтым. Калі вы спытаеце сябе: "Чаму мне добра?" --- таксама будуць знойдзеныя дзясяткі адказаў.
 
 Паспрабуйце спытаць сябе, чаму ж вы такі лёсік, пашукайце прычыны. Зьвярніце ўвагу, як у працэсе пошуку на вашым твары зьяўляецца ўсьмешка, выпростваюцца плечы, ясьнее ў галаве. А цяпер зьверніцеся да сябе: чаму ж я такі няшчасны? – і пачніце над гэтым разважаць. Заўважылі розьніцу? Хоць рэальнасьць, у якой вы знаходзіцеся, ані не зьмянілася.
 
